--- a/ODExplorer/App.xaml
+++ b/ODExplorer/App.xaml
@@ -2,23 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
-             xmlns:local="clr-namespace:ODExplorer"
+             xmlns:Theme="clr-namespace:ODExplorer.Themes"
              xmlns:settings="clr-namespace:ODExplorer.AppSettings"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
+    <Application.Resources>        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ODExplorer;component/Themes/TitleBar.xaml" />
-                <ResourceDictionary Source="/ODExplorer;component/Themes/DefaultColours.xaml" />
-                <ResourceDictionary Source="/ODExplorer;component/Themes/CenterGroupBox.xaml" />
-                <ResourceDictionary Source="/ODExplorer;component/Themes/DataGridStyles.xaml" />
-                <ResourceDictionary Source="/ODExplorer;component/Themes/ControlStyles.xaml" />
+                <Theme:ThemeManager DefaultSource="/ODExplorer;component/Themes/DefaultTheme.xaml" />
+                
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/Convertors.xaml" />
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/TitleBar.xaml" />
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/CenterGroupBox.xaml" />
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/DataGridStyles.xaml" />
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/ControlStyles.xaml" />
+                <ResourceDictionary Source="/ODExplorer;component/ControlStyles/SecondaryWindowStyles.xaml" />
+                
+                <!--<ResourceDictionary Source="/ODExplorer;component/Themes/DefaultTheme.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
 
             <System:String x:Key="AppVersion">0.9.4</System:String>
-
             <settings:Settings x:Key="AppSettings" />
-
         </ResourceDictionary>
     </Application.Resources>
 </Application>
