--- a/ODExplorer/AppSettings/SettingsWindow.xaml
+++ b/ODExplorer/AppSettings/SettingsWindow.xaml
@@ -11,7 +11,7 @@
         mc:Ignorable="d"
         FontFamily="Eurostile"
         FontSize="18"
-        Background="{DynamicResource MainWindowBackground}"
+        Background="{DynamicResource PrimaryBackground}"
         Title="ED EXPLORER - Settings"
         Width="500"
         SizeToContent="Height"
@@ -44,7 +44,7 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </Window.Resources>
-    <Border BorderBrush="{DynamicResource Groupbox Border}"
+    <Border BorderBrush="{DynamicResource PrimaryBorder}"
             BorderThickness="2">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -65,14 +65,14 @@
             <Label Grid.Row="0"
                    Grid.Column="1"
                    Content="Settings"
-                   Foreground="{DynamicResource Font Colour}" />
+                   Foreground="{DynamicResource PrimaryForeground}" />
 
             <GroupBox Grid.Row="1"
                       Grid.Column="1"
                       Header="Current System Bodies Sorting"
                       BorderThickness="0.7"
                       Style="{DynamicResource SystemBorder}"
-                      Foreground="{DynamicResource Font Colour}"
+                      Foreground="{DynamicResource PrimaryForeground}"
                       Background="{DynamicResource MainWindowBackground}">
                 <Grid Margin="0,0,0,10">
                     <Grid.ColumnDefinitions>
@@ -82,12 +82,14 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Label Grid.Row="0"
                            Grid.Column="0"
                            Content="Category"
                            FontSize="14"
-                           Foreground="{DynamicResource Font Colour}"
+                           Foreground="{DynamicResource PrimaryForeground}"
                            HorizontalContentAlignment="Center" />
                     <ComboBox Grid.Row="1"
                               Grid.Column="0"
@@ -110,7 +112,7 @@
                            Content="Direction"
                            FontSize="14"
                            HorizontalAlignment="Center"
-                           Foreground="{DynamicResource Font Colour}"
+                           Foreground="{DynamicResource PrimaryForeground}"
                            HorizontalContentAlignment="Center" />
                     <ComboBox Grid.Row="1"
                               Grid.Column="1"
@@ -128,6 +130,22 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
+
+                    <CheckBox Grid.Row="3"
+                              Grid.Column="0"
+                              FontSize="14"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center"
+                              IsChecked="{Binding AppSettings.ClonedValues.ExludeStarsFromSorting}"
+                              Content="Exclude Stars From Sorting" />
+
+                    <TextBlock  Grid.Row="3"
+                                Grid.Column="1"
+                                Foreground="{DynamicResource PrimaryForeground}"
+                                FontSize="10"
+                                VerticalAlignment="Center"
+                                Text="When enabled stars will be automatically sorted to the bottom of the grid and ignore the above settings"
+                                TextWrapping="WrapWithOverflow" />
                 </Grid>
             </GroupBox>
 
@@ -136,7 +154,7 @@
                       Header="Valuable Body Conditions"
                       BorderThickness="0.7"
                       Style="{DynamicResource SystemBorder}"
-                      Foreground="{DynamicResource Font Colour}"
+                      Foreground="{DynamicResource PrimaryForeground}"
                       Background="{DynamicResource MainWindowBackground}"
                       Margin="0,10,0,10">
                 <Grid>
@@ -156,7 +174,7 @@
                            Grid.Row="0"
                            Grid.Column="0"
                            HorizontalContentAlignment="Left"
-                           Foreground="{DynamicResource Font Colour}" />
+                           Foreground="{DynamicResource PrimaryForeground}" />
                     <Slider Grid.Row="1"
                             Grid.Column="0"
                             Value="{Binding AppSettings.ClonedValues.WorthMappingValue}"
@@ -171,14 +189,14 @@
                                HorizontalAlignment="Right"
                                VerticalAlignment="Center"
                                Text="{Binding AppSettings.ClonedValues.WorthMappingValue, StringFormat={}{0:N0} cr}"
-                               Foreground="{DynamicResource Font Colour}" />
+                               Foreground="{DynamicResource PrimaryForeground}" />
 
                     <Label Content="Maximum Distance From Arrival"
                            FontSize="14"
                            Grid.Row="2"
                            Grid.Column="0"
                            HorizontalContentAlignment="Left"
-                           Foreground="{DynamicResource Font Colour}" />
+                           Foreground="{DynamicResource PrimaryForeground}" />
                     <Slider Grid.Row="3"
                             Grid.Column="0"
                             Value="{Binding AppSettings.ClonedValues.WorthMappingDistance}"
@@ -190,7 +208,7 @@
                     <TextBlock Grid.Row="3"
                                Grid.Column="1"
                                FontSize="16"
-                               Foreground="{DynamicResource Font Colour}">
+                               Foreground="{DynamicResource PrimaryForeground}">
                         <TextBlock.Style>
                             <Style>
                                 <Setter Property="TextBlock.Text"
@@ -219,8 +237,8 @@
                       Header="UI Scale"
                       BorderThickness="0.7"
                       Style="{DynamicResource SystemBorder}"
-                      Foreground="{DynamicResource Font Colour}"
-                      Background="{DynamicResource MainWindowBackground}"
+                      Foreground="{DynamicResource PrimaryForeground}"
+                      Background="{DynamicResource PrimaryBackground}"
                       Margin="0,0,0,10">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -240,7 +258,7 @@
                                  HorizontalAlignment="Right"
                                  VerticalAlignment="Center"
                                  Text="{Binding AppSettings.ClonedValues.UiScale, StringFormat={}{0:N2} x}"
-                                 Foreground="{DynamicResource Font Colour}" />
+                                 Foreground="{DynamicResource PrimaryForeground}" />
                 </Grid>
             </GroupBox>
 
@@ -249,8 +267,8 @@
                       Header="Misc"
                       BorderThickness="0.7"
                       Style="{DynamicResource SystemBorder}"
-                      Foreground="{DynamicResource Font Colour}"
-                      Background="{DynamicResource MainWindowBackground}"
+                      Foreground="{DynamicResource PrimaryForeground}"
+                      Background="{DynamicResource PrimaryBackground}"
                       Margin="0,0,0,10">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -283,10 +301,8 @@
                                   SelectedItem="{Binding AppSettings.ClonedValues.TemperatureUnit}"
                                   Width="90"
                                   HorizontalAlignment="Left"
-                                  FontSize="14"
-                                  Background="{DynamicResource MainWindowBackground}"
-                                  BorderBrush="{DynamicResource Groupbox Border}" />
-                        <TextBlock  Foreground="{DynamicResource Font Colour}"
+                                  FontSize="14"/>
+                        <TextBlock  Foreground="{DynamicResource PrimaryForeground}"
                                     FontSize="14"
                                     Margin="5,0,0,0"
                                     VerticalAlignment="Center"
@@ -295,7 +311,7 @@
                     </StackPanel>
                     <TextBlock  Grid.Row="0"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 VerticalAlignment="Center"
                                 Text="Sets the temperature unit used for the surface temperature for bodies"
@@ -304,13 +320,13 @@
                     <CheckBox Grid.Row="2"
                               Grid.Column="0"
                               Content="Ignore Non-Bodies"
-                              Foreground="{DynamicResource Font Colour}"
+                              Foreground="{DynamicResource PrimaryForeground}"
                               FontSize="14"
                               VerticalAlignment="Center"
                               IsChecked="{Binding AppSettings.ClonedValues.IgnoreNonBodies}" />
                     <TextBlock  Grid.Row="2"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 VerticalAlignment="Center"
                                 Text="When enabled Non-Bodies, such as Asteroid Belts, will be ignored and not displayed"
@@ -319,13 +335,13 @@
                     <CheckBox Grid.Row="4"
                               Grid.Column="0"
                               Content="Auto Copy CSV System To Clipboard"
-                              Foreground="{DynamicResource Font Colour}"
+                              Foreground="{DynamicResource PrimaryForeground}"
                               FontSize="14"
                               VerticalAlignment="Center"
                               IsChecked="{Binding AppSettings.ClonedValues.AutoCopyCsvSystemToClipboard}" />
                     <TextBlock  Grid.Row="4"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 VerticalAlignment="Center"
                                 Text="When enabled the system name for the current system in the CSV parser will be automatically copied to the clipboard"
@@ -334,13 +350,13 @@
                     <CheckBox Grid.Row="6"
                               Grid.Column="0"
                               Content="Show Addditional Windows in Taskbar"
-                              Foreground="{DynamicResource Font Colour}"
+                              Foreground="{DynamicResource PrimaryForeground}"
                               FontSize="14"
                               VerticalAlignment="Center"
                               IsChecked="{Binding AppSettings.ClonedValues.ShowAdditionalWindowsInTaskBar}" />
                     <TextBlock  Grid.Row="6"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 VerticalAlignment="Center"
                                 Text="When enabled the Biological and Scan Data windows will show in the taskbar"
@@ -356,7 +372,7 @@
                             Click="ResetSettingsButton_Click" />
                     <TextBlock  Grid.Row="8"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 Text="Reset all settings to the default values"
                                 VerticalAlignment="Center"
@@ -372,7 +388,7 @@
                             Click="ResetExplorationValueButton_Click" />
                     <TextBlock  Grid.Row="10"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 Text="Reset Estimated Scan Value"
                                 VerticalAlignment="Center"
@@ -388,7 +404,7 @@
                             Click="ClearBioLogicalData_Click" />
                     <TextBlock  Grid.Row="12"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 Text="Clear Biological Scan Data"
                                 VerticalAlignment="Center"
@@ -404,7 +420,7 @@
                             Click="ClearGeoLogicalData_Click" />
                     <TextBlock  Grid.Row="14"
                                 Grid.Column="1"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 FontSize="10"
                                 Text="Clear Geological Scan Data"
                                 VerticalAlignment="Center"
