--- a/ODExplorer/ControlStyles/CenterGroupBox.xaml
+++ b/ODExplorer/ControlStyles/CenterGroupBox.xaml
@@ -6,6 +6,10 @@
 
     <Style x:Key="SystemBorder"
            TargetType="{x:Type GroupBox}">
+        <Setter Property="Foreground"
+                Value="{DynamicResource GroupBoxForegound}" />
+        <Setter Property="BorderThickness"
+                Value="0.5" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GroupBox}">
@@ -51,7 +55,7 @@
                                 Grid.RowSpan="3"
                                 Grid.ColumnSpan="5"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{DynamicResource Groupbox Border}">
+                                BorderBrush="{DynamicResource GroupBoxBorder}">
                             <Border.OpacityMask>
                                 <MultiBinding Converter="{StaticResource CenterBorderGapMaskConverter}">
                                     <Binding ElementName="Header"
@@ -64,10 +68,10 @@
                             </Border.OpacityMask>
 
                             <Border BorderThickness="{TemplateBinding BorderThickness}"
-                                    BorderBrush="{DynamicResource Groupbox Border}"
+                                    BorderBrush="{DynamicResource GroupBoxBorder}"
                                     CornerRadius="0">
                                 <Border BorderThickness="{TemplateBinding BorderThickness}"
-                                        BorderBrush="{DynamicResource Groupbox Border}"
+                                        BorderBrush="{DynamicResource GroupBoxBorder}"
                                         CornerRadius="0" />
                             </Border>
                         </Border>
