--- a/ODExplorer/ControlStyles/DataGridStyles.xaml
+++ b/ODExplorer/ControlStyles/DataGridStyles.xaml
@@ -1,31 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ndata="clr-namespace:ODExplorer.NavData"
-                    xmlns:utils="clr-namespace:ODExplorer.Utils"
                     xmlns:CsvParser="clr-namespace:ParserLibrary;assembly=ParserLibrary"
-                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                    xmlns:local="clr-namespace:ODExplorer.Themes"
-                    x:Class="ODExplorer.Themes.DataGridStyles">
+                    xmlns:utils="clr-namespace:ODExplorer.Utils">
 
-    <!--#region Converters-->
-    <utils:IntToBoolConverter x:Key="IntToBool" />
-    <BooleanToVisibilityConverter x:Key="BoolToVis" />
     <utils:IntToVisibilityConverter x:Key="intToVis" />
-    <utils:InvertableBooleanToVisibilityConverter x:Key="InvBoolToVis" />
-    <utils:BoolToHeaderVisibilty x:Key="BoolToHeaderVis" />
-    <utils:InvertBool x:Key="InvertBool" />
-    <utils:TwoBooleanToVisibilityConverter x:Key="TwoBoolToVis" />
-    <utils:BoolToDatagridColoumnWidth x:Key="BoolToDGColumnWidth" />
-    <utils:BoolToRowVisibilty x:Key="BoolToRowVis" />
-    <utils:BoolToDouble x:Key="BoolToDouble" />
-    <utils:BoolToMargin x:Key="BoolToMargin" />
-    <utils:CsvTypeEnumToVis x:Key="CsvTypeToVis" />
-    <utils:EnumDescriptionConverter x:Key="EnumDesc" />
-    <utils:JumpRangeToStringCoverter x:Key="JumpRangToString" />
-    <utils:PlanetClassToImage x:Key="PlanetClassToImage" />
-    <!--#endregion-->
-
+    
     <!--#region DataGrid settings-->
     <Style x:Key="DataGrid Settings"
            TargetType="{x:Type DataGrid}">
@@ -63,6 +43,10 @@
                 Value="FullRow" />
         <Setter Property="EnableRowVirtualization"
                 Value="False" />
+        <Setter Property="HorizontalGridLinesBrush"
+                Value="{DynamicResource DataGridHorizontalGridLine}" />
+        <Setter Property="VerticalGridLinesBrush"
+                Value="{DynamicResource DataGridVerticalGridLine}" />
     </Style>
 
     <Style TargetType="{x:Type DataGrid}"
@@ -116,9 +100,9 @@
     <!--Default Style For Headers is Blank-->
     <Style TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Background"
-                Value="Transparent" />
-        <Setter Property="BorderBrush"
-                Value="Transparent" />
+                Value="{DynamicResource DataGridColumnHeaderBackground}" />
+        <Setter Property="Foreground"
+                Value="{DynamicResource DataGridColumnHeaderForeground}" />
         <Setter Property="BorderThickness"
                 Value="0" />
     </Style>
@@ -126,47 +110,47 @@
     <Style x:Key="Name Header"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Background"
-                Value="{DynamicResource System Column Header}" />
+                Value="{DynamicResource DataGridColumnHeaderBackground}" />
         <Setter Property="HorizontalContentAlignment"
                 Value="Left" />
-        <Setter Property="Margin"
-                Value="0,0,0,0" />
+        <Setter Property="Padding"
+                Value="5,0,0,0" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Font Colour}" />
+                Value="{DynamicResource DataGridColumnHeaderForeground}" />
     </Style>
 
     <Style x:Key="DataGrid Header Left"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Background"
-                Value="{DynamicResource System Column Header}" />
+                Value="{DynamicResource DataGridColumnHeaderBackground}" />
         <Setter Property="HorizontalContentAlignment"
                 Value="Left" />
-        <Setter Property="Margin"
+        <Setter Property="Padding"
                 Value="5,0,0,0" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Font Colour}" />
+                Value="{DynamicResource DataGridColumnHeaderForeground}" />
     </Style>
 
     <Style x:Key="DataGrid Header Center"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Background"
-                Value="{DynamicResource System Column Header}" />
+                Value="{DynamicResource DataGridColumnHeaderBackground}" />
         <Setter Property="HorizontalContentAlignment"
                 Value="Center" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Font Colour}" />
+                Value="{DynamicResource DataGridColumnHeaderForeground}" />
     </Style>
 
     <Style x:Key="DataGrid Header Right"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Background"
-                Value="{DynamicResource System Column Header}" />
+                Value="{DynamicResource DataGridColumnHeaderBackground}" />
         <Setter Property="HorizontalContentAlignment"
                 Value="Right" />
-        <Setter Property="Margin"
+        <Setter Property="Padding"
                 Value="0,0,5,0" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Font Colour}" />
+                Value="{DynamicResource DataGridColumnHeaderForeground}" />
     </Style>
     <!--#endregion-->
 
@@ -174,7 +158,7 @@
     <Style x:Key="System RowStyle"
            TargetType="{x:Type DataGridRow}">
         <Setter Property="BorderBrush"
-                Value="Black" />
+                Value="{DynamicResource PrimaryBackground}" />
         <Setter Property="BorderThickness"
                 Value="0" />
         <Setter Property="ContextMenu"
@@ -236,30 +220,30 @@
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.Discovered}">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Known}" />
+                        Value="{DynamicResource DataGridRowKnownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource Known Font Colour}" />
+                        Value="{DynamicResource DataGridRowKnownBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.UnDiscovered}">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Unknown}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource UnKnown Font Colour}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.WorthMapping}">
                 <Setter Property="Background"
-                        Value="{DynamicResource High Value Body}" />
+                        Value="{DynamicResource DataGridRowHighValueBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource MainWindowBackground}" />
+                        Value="{DynamicResource DataGridRowHighValueBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.MappedByUser}">
                 <Setter Property="Background"
-                        Value="{DynamicResource User Mapped Body}" />
+                        Value="{DynamicResource DataGridRowUserMappedBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource MainWindowBackground}" />
+                        Value="{DynamicResource DataGridRowUserMappedBodyForeGround}" />
             </DataTrigger>
             <Trigger Property="IsSelected"
                      Value="True">
@@ -310,6 +294,8 @@
            TargetType="{x:Type TextBlock}">
         <Setter Property="HorizontalAlignment"
                 Value="Center" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
         <Setter Property="ToolTip"
                 Value="The Number of Bodies detected by the Discovery Scanner" />
     </Style>
@@ -356,16 +342,16 @@
             <DataTrigger Binding="{Binding IsKnownToEDSM}"
                          Value="True">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Known}" />
+                        Value="{DynamicResource DataGridRowKnownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource Known Font Colour}" />
+                        Value="{DynamicResource DataGridRowKnownBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding IsKnownToEDSM}"
                          Value="False">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Unknown}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource UnKnown Font Colour}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyForeGround}" />
             </DataTrigger>
             <Trigger Property="IsSelected"
                      Value="True">
@@ -393,23 +379,23 @@
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.Discovered}">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Known}" />
+                        Value="{DynamicResource DataGridRowKnownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource Known Font Colour}" />
+                        Value="{DynamicResource DataGridRowKnownBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.UnDiscovered}">
                 <Setter Property="Background"
-                        Value="{DynamicResource EDSM Unknown}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource UnKnown Font Colour}" />
+                        Value="{DynamicResource DataGridRowUnknownBodyForeGround}" />
             </DataTrigger>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.WorthMapping}">
                 <Setter Property="Background"
-                        Value="{DynamicResource High Value Body}" />
+                        Value="{DynamicResource DataGridRowHighValueBodyBackground}" />
                 <Setter Property="Foreground"
-                        Value="{DynamicResource MainWindowBackground}" />
+                        Value="{DynamicResource DataGridRowHighValueBodyForeGround}" />
             </DataTrigger>
             <Trigger Property="IsSelected"
                      Value="True">
@@ -449,9 +435,9 @@
         <Setter Property="BorderBrush"
                 Value="Transparent" />
         <Setter Property="Background"
-                Value="{DynamicResource EDSM Known}" />
+                Value="{DynamicResource DataGridRowKnownBodyBackground}" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Font Colour}" />
+                Value="{DynamicResource DataGridRowKnownBodyForeGround}" />
     </Style>
 
     <!--#endregion-->
