--- a/ODExplorer/ControlStyles/TitleBar.xaml
+++ b/ODExplorer/ControlStyles/TitleBar.xaml
@@ -1,9 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Titlebar Forground"
-                     Color="#FFD9A804" />
-    <SolidColorBrush x:Key="Titlebar MouseOver"
-                     Color="#FF7A7A7A" />
+
     <!--Base style for title bar buttons-->
     <Style x:Key="CaptionButtonStyle"
            TargetType="Button">
@@ -18,7 +15,7 @@
                                    Text="{TemplateBinding Content}"
                                    FontFamily="Segoe MDL2 Assets"
                                    FontSize="10"
-                                   Foreground="{DynamicResource Titlebar Forground}"
+                                   Foreground="{DynamicResource TitlebarForeGround}"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
                                    RenderOptions.ClearTypeHint="Auto"
@@ -30,46 +27,10 @@
                                  Value="True">
                             <Setter TargetName="LayoutRoot"
                                     Property="Background"
-                                    Value="{DynamicResource Titlebar MouseOver}" />
+                                    Value="{DynamicResource TitlebarMouseOver}" />
                             <Setter TargetName="txt"
                                     Property="Foreground"
-                                    Value="{DynamicResource Titlebar Forground}" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="CaptionButtonStyleAutoWidth"
-           TargetType="Button">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Grid x:Name="LayoutRoot"
-                          Background="Transparent"
-                          Width="Auto"
-                          Height="Auto">
-                        <TextBlock x:Name="txt"
-                                   Text="{TemplateBinding Content}"
-                                   FontFamily="Segoe MDL2 Assets"
-                                   FontSize="10"
-                                   Foreground="{DynamicResource Titlebar Forground}"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center"
-                                   RenderOptions.ClearTypeHint="Auto"
-                                   TextOptions.TextRenderingMode="Aliased"
-                                   TextOptions.TextFormattingMode="Display" />
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver"
-                                 Value="True">
-                            <Setter TargetName="LayoutRoot"
-                                    Property="Background"
-                                    Value="{DynamicResource Titlebar MouseOver}" />
-                            <Setter TargetName="txt"
-                                    Property="Foreground"
-                                    Value="{DynamicResource Titlebar Forground}" />
+                                    Value="{DynamicResource TitlebarForeGround}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -108,6 +69,6 @@
         <Setter Property="Content"
                 Value="&#xE106;" />
         <Setter Property="Foreground"
-                Value="{DynamicResource Titlebar Forground}" />
+                Value="{DynamicResource TitlebarForeGround}" />
     </Style>
 </ResourceDictionary>
