--- a/ODExplorer/CustomMessageBox/CustomMessageBoxView.xaml
+++ b/ODExplorer/CustomMessageBox/CustomMessageBoxView.xaml
@@ -17,7 +17,7 @@
         Title=""
         FontFamily="Eurostile"
         FontSize="18"
-        Background="{DynamicResource MainWindowBackground}"
+        Background="{DynamicResource PrimaryBackground}"
         MinHeight="100"
         MaxWidth="450"
         MinWidth="250">
@@ -33,7 +33,7 @@
     </Window.CommandBindings>
 
     <Border x:Name="MainWindowBorder"
-            BorderBrush="{DynamicResource Groupbox Border}"
+            BorderBrush="{DynamicResource PrimaryBorder}"
             BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
@@ -42,7 +42,7 @@
             </Grid.RowDefinitions>
             <!--#region Custom Title Bar-->
             <Grid Height="25"
-                  Background="#FF3C4043">
+                  Background="{DynamicResource TitleBarBackGround}">
                 <StackPanel Orientation="Horizontal"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
@@ -57,7 +57,7 @@
                                Margin="5,0,0,0"
                                VerticalAlignment="Center"
                                FontSize="16"
-                               Foreground="{DynamicResource Titlebar Forground}" />
+                               Foreground="{DynamicResource TitlebarForeGround}" />
                 </StackPanel>
 
                 <!--Caption buttons-->
@@ -81,7 +81,7 @@
                     <TextBlock Name="MessageText"
                                TextWrapping="Wrap"
                                FontSize="16"
-                               Foreground="{DynamicResource Font Colour}"
+                               Foreground="{DynamicResource PrimaryForeground}"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center"
                                TextAlignment="Center"
@@ -94,7 +94,7 @@
 
                         <!-- No Button -->
                         <Button Name="Button_No"
-                                Foreground="{DynamicResource Font Colour}"
+                                Foreground="{DynamicResource PrimaryForeground}"
                                 MinWidth="60"
                                 Height="26"
                                 Margin="5,0"
@@ -103,7 +103,7 @@
                                 DockPanel.Dock="Right"
                                 Click="Button_No_Click">
                             <Label Name="Label_No"
-                                   Foreground="{DynamicResource Font Colour}"
+                                   Foreground="{DynamicResource PrimaryForeground}"
                                    Padding="0"
                                    Margin="10,0">_NO</Label>
                         </Button>
@@ -119,7 +119,7 @@
                                 DockPanel.Dock="Right"
                                 Click="Button_Yes_Click">
                             <Label Name="Label_Yes"
-                                   Foreground="{DynamicResource Font Colour}"
+                                   Foreground="{DynamicResource PrimaryForeground}"
                                    Padding="0"
                                    Margin="10,0">_YES</Label>
                         </Button>
@@ -136,7 +136,7 @@
                                 DockPanel.Dock="Right"
                                 Click="Button_Cancel_Click">
                             <Label Name="Label_Cancel"
-                                   Foreground="{DynamicResource Font Colour}"
+                                   Foreground="{DynamicResource PrimaryForeground}"
                                    Padding="0"
                                    Margin="10,0">_Cancel</Label>
                         </Button>
@@ -153,7 +153,7 @@
                                 DockPanel.Dock="Right"
                                 Click="Button_OK_Click">
                             <Label Name="Label_Ok"
-                                   Foreground="{DynamicResource Font Colour}"
+                                   Foreground="{DynamicResource PrimaryForeground}"
                                    Padding="0"
                                    Margin="10,0">_OK</Label>
                         </Button>
